--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_LXKF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_LXKF.cshtml
@@ -71,7 +71,7 @@
         </div>
         <div class="div_content" style="margin-top:20px;">
             <span class="span_step span_step_second"></span>
-            <span class="span_step_text">请描述您遇到的问题：</span>
+            <span class="span_step_text" id="span_step_text_second">请描述您遇到的问题：</span>
         </div>
         <div class="div_content div_content_wtjj">
             <div class="div_wtjj">
@@ -106,9 +106,22 @@
                             </td>
                         </tr>
                         <tr class="tr_wtjj">
-                            <td></td>
+                            <td class="td_wtjj_inner_left"></td>
                             <td class="td_wtjj_inner_right">
                                 <textarea class="textarea_bscyy"></textarea>
+                            </td>
+                        </tr>
+                        <tr class="tr_wtjj">
+                            <td class="td_wtjj_inner_left">上传图片：</td>
+                            <td class="td_wtjj_inner_right">
+                                <input type="button" value="图片上传" />
+                                <span>已上传图片1/5，最多可上传5张图片，支持：jpg/gif/png格式 </span>
+                            </td>
+                        </tr>
+                        <tr class="tr_wtjj">
+                            <td class="td_wtjj_inner_left"></td>
+                            <td class="td_wtjj_inner_right">
+                                <input class="button" type="button" value="提交问题" style="width:153px; height:44px" />
                             </td>
                         </tr>
                     </table>
