--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/BZZX/BZZX_LXKF.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/BZZX/BZZX_LXKF.css
@@ -1,5 +1,6 @@
 ﻿.div_body {
     width: 100%;
+    height: 760px;
     display: block;
     border: 1px solid #DEDEDE;
     margin-top: 20px;
@@ -161,4 +162,17 @@
     margin-bottom: 10px;
     margin-top: 10px;
     border-radius: 4px;
+}
+
+.button {
+    position: absolute;
+    font-size: 16px;
+    width: 135px;
+    height: 40px;
+    cursor: pointer;
+    background: #5bc0de;
+    color: #fff;
+    border-radius: 4px;
+    border: none;
+    cursor: pointer;
 }
