--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_LXKF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_LXKF.cshtml
@@ -26,7 +26,7 @@
                         <td class="td_wtlx_inner_right">
                             <span class="span_wtlx_inner_right" id="span_wtlx_inner_right_xxbsc">信息被删除</span>
                             <span class="span_wtlx_inner_right" id="span_wtlx_inner_right_xxbfhxg">信息被返回修改</span>
-                            <span class="span_wtlx_inner_right" id="span_wtlx_inner_right_xxbflbd">信息被判分类不当</span>
+                            <span class="span_wtlx_inner_right" id="span_wtlx_inner_right_xxbpflbd">信息被判分类不当</span>
                             <span class="span_wtlx_inner_right" id="span_wtlx_inner_right_xxbxs">信息不显示/无法刷新</span>
                         </td>
                     </tr>
@@ -108,7 +108,7 @@
                         <tr class="tr_wtjj">
                             <td class="td_wtjj_inner_left"></td>
                             <td class="td_wtjj_inner_right">
-                                <textarea class="textarea_bscyy"></textarea>
+                                <textarea class="textarea_mswt" id="textarea_mswt">请描述您的具体问题，字数在15至300之间</textarea>
                             </td>
                         </tr>
                         <tr class="tr_wtjj">
