--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/BZZX/BZZX_LXKF.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/BZZX/BZZX_LXKF.css
@@ -153,7 +153,7 @@
         color: #ff6a00;
     }
 
-.textarea_bscyy {
+.textarea_mswt {
     width: 500px;
     height: 200px;
     background-color: #fff;
@@ -162,6 +162,8 @@
     margin-bottom: 10px;
     margin-top: 10px;
     border-radius: 4px;
+    padding: 9px;
+    color: #999999;
 }
 
 .button {
