--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_LXKF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_LXKF.cshtml
@@ -97,7 +97,7 @@
                 </div>
                 <div class="div_wtjj_inner" id="div_xxbfhxg">
                     <table class="table_wtjj">
-                        <tr class="tr_wtjj">
+                        <tr class="tr_wtjj" id="tr_xxbh">
                             <td class="td_wtjj_inner_left">信息编号：</td>
                             <td class="td_wtjj_inner_right">
                                 <input type="text" id="inputXXBFHXG_XXBH" class="input_content">
@@ -125,6 +125,17 @@
                             </td>
                         </tr>
                     </table>
+                </div>
+                <div class="div_wtjj_inner" id="div_qtxxmy" style="display:none">
+                    <span class="span_wtjj_inner" id="span_wtjj_inner_sfzbmy">1、身份证被冒用</span>
+                    <span class="span_wtjj_inner" id="span_wtjj_inner_mygrxx">2、冒用个人肖像、公司名称等虚假信息</span>
+                    <span class="span_wtjj_inner" id="span_wtjj_inner_gsxxbmy">3、公司信息被冒用</span>
+                </div>
+                <div class="div_wtjj_inner" id="div_ssbts" style="display:none">
+                    <span class="span_wtjj_inner" id="span_wtjj_inner_btswxjwfxx">1、被投诉为虚假违法信息</span>
+                    <span class="span_wtjj_inner" id="span_wtjj_inner_xxbsczmb">2、信息被删除怎么办</span>
+                    <span class="span_wtjj_inner" id="span_wtjj_inner_xxbxs">3、信息不显示/无法刷新怎么办</span>
+                    <span class="span_wtjj_inner" id="span_wtjj_inner_rhscdgsdpj">4、如何删除对公司的评价</span>
                 </div>
             </div>
         </div>
