--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_LXKF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_LXKF.cshtml
@@ -127,9 +127,33 @@
                     </table>
                 </div>
                 <div class="div_wtjj_inner" id="div_qtxxmy" style="display:none">
-                    <span class="span_wtjj_inner" id="span_wtjj_inner_sfzbmy">1、身份证被冒用</span>
-                    <span class="span_wtjj_inner" id="span_wtjj_inner_mygrxx">2、冒用个人肖像、公司名称等虚假信息</span>
-                    <span class="span_wtjj_inner" id="span_wtjj_inner_gsxxbmy">3、公司信息被冒用</span>
+                    <div style="display:block;height:75px;">
+                        <span class="span_wtjj_inner" id="span_wtjj_inner_sfzbmy">1、身份证被冒用</span>
+                        <span class="span_wtjj_inner" id="span_wtjj_inner_mygrxx">2、冒用个人肖像、公司名称等虚假信息</span>
+                        <span class="span_wtjj_inner" id="span_wtjj_inner_gsxxbmy">3、公司信息被冒用</span>
+                    </div>
+                    <div class="div_qtxxmy_inner div_wtjj_inner_sfzbmy" id="div_wtjj_inner_sfzbmy" style="display:none">
+                        根据您的问题，我们建议您：
+                        <div class="div_wtjj_inner_sfzbmy_inner">
+                            建议您取消或更换实名认证，请点击下方的"填表单，联系客服"按钮，在“描述问题中”填写“相关冒用的信息页面或用户页面的链接”，在“上传照片”中上传公司营业执照、法人身份证原件数码照，以便及时为您提交处理。<br />
+                            <input class="btn btn-info" type="button" style="margin-top: 3px; width: 140px;" value="填表单，联系客服" onclick="TBD()" />
+                        </div>
+                    </div>
+                    <div class="div_qtxxmy_inner div_wtjj_inner_mygrxx" id="div_wtjj_inner_mygrxx" style="display:none">
+                        根据您的问题，我们建议您：
+                        <div class="div_wtjj_inner_mygrxx_inner">
+                            建议您在您被冒用的对应的信息页面中点击“举报”按钮进行举报并详细说明情况以便核实后处理。具体的按钮位置为： <br />
+                            <span class="span_wtjj_inner_mygrxx_inner"></span>
+                            <input class="btn btn-info" type="button" style="margin-top: 3px; width: 140px;" value="填表单，联系客服" onclick="TBD()" />
+                        </div>
+                    </div>
+                    <div class="div_qtxxmy_inner div_wtjj_inner_gsxxbmy" id="div_wtjj_inner_gsxxbmy" style="display:none">
+                        根据您的问题，我们建议您：
+                        <div class="div_wtjj_inner_gsxxbmy_inner">
+                            若您的公司信息被冒用，请点击此处快速申诉。<br />
+                            <input class="btn btn-info" type="button" style="margin-top: 3px; width: 140px;" value="填表单，联系客服" onclick="TBD()" />
+                        </div>
+                    </div>
                 </div>
                 <div class="div_wtjj_inner" id="div_ssbts" style="display:none">
                     <span class="span_wtjj_inner" id="span_wtjj_inner_btswxjwfxx">1、被投诉为虚假违法信息</span>
