--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_LXKF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_LXKF.cshtml
@@ -106,7 +106,7 @@
                             </td>
                         </tr>
                         <tr class="tr_wtjj">
-                            <td class="td_wtjj_inner_left"></td>
+                            <td class="td_wtjj_inner_left" style="vertical-align:top;padding-top:15px;">问题描述：</td>
                             <td class="td_wtjj_inner_right">
                                 <textarea class="textarea_mswt" id="textarea_mswt">请描述您的具体问题，字数在15至300之间</textarea>
                             </td>
@@ -126,7 +126,7 @@
                         </tr>
                     </table>
                 </div>
-                <div class="div_wtjj_inner" id="div_qtxxmy" style="display:none">
+                <div class="div_wtjj_inner" id="div_qtxxmy" style="display:none;">
                     <div style="display:block;height:75px;">
                         <span class="span_wtjj_inner" id="span_wtjj_inner_sfzbmy">1、身份证被冒用</span>
                         <span class="span_wtjj_inner" id="span_wtjj_inner_mygrxx">2、冒用个人肖像、公司名称等虚假信息</span>
