--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_LXKF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_LXKF.cshtml
@@ -156,10 +156,41 @@
                     </div>
                 </div>
                 <div class="div_wtjj_inner" id="div_ssbts" style="display:none">
-                    <span class="span_wtjj_inner" id="span_wtjj_inner_btswxjwfxx">1、被投诉为虚假违法信息</span>
-                    <span class="span_wtjj_inner" id="span_wtjj_inner_xxbsczmb">2、信息被删除怎么办</span>
-                    <span class="span_wtjj_inner" id="span_wtjj_inner_xxbxs">3、信息不显示/无法刷新怎么办</span>
-                    <span class="span_wtjj_inner" id="span_wtjj_inner_rhscdgsdpj">4、如何删除对公司的评价</span>
+                    <div style="display:block;height:75px;">
+                        <span class="span_wtjj_inner" id="span_wtjj_inner_btswxjwfxx">1、被投诉为虚假违法信息</span>
+                        <span class="span_wtjj_inner" id="span_wtjj_inner_xxbsczmb">2、信息被删除怎么办</span>
+                        <span class="span_wtjj_inner" id="span_wtjj_inner_xxbxs">3、信息不显示/无法刷新怎么办</span>
+                        <span class="span_wtjj_inner" id="span_wtjj_inner_rhscdgsdpj">4、如何删除对公司的评价</span>
+                    </div>
+                    <div class="div_qtxxmy_inner div_wtjj_inner_btswxjwfxx" id="div_wtjj_inner_btswxjwfxx" style="display:none">
+                        根据您的问题，我们建议您：
+                        <div>
+                            如果您的信息被投诉为虚假违法信息，请您确认是否违反信息小镇发帖版规，若有，则请修改信息并重新发布。若查看后发现没有违反相关规定，则请点击下方的“填表单，联系客服”按钮，联系客服人员解决。<br />
+                            <input class="btn btn-info" type="button" style="margin-top: 3px; width: 140px;" value="填表单，联系客服" onclick="TBD()" />
+                        </div>
+                    </div>
+                    <div class="div_qtxxmy_inner div_wtjj_inner_xxbsczmb" id="div_wtjj_inner_xxbsczmb" style="display:none">
+                        根据您的问题，我们建议您：
+                        <div>
+                            请您确认是否违反信息小镇发帖版规，若有，则请修改信息，重新发布。若没有，则建议您在分类上面选择“信息被删除”类型的问题，联系客服处理。<br />
+                            <input class="btn btn-info" type="button" style="margin-top: 3px; width: 140px;" value="填表单，联系客服" onclick="TBD()" />
+                        </div>
+                    </div>
+                    <div class="div_qtxxmy_inner div_wtjj_inner_xxbxs" id="div_wtjj_inner_xxbxs" style="display:none">
+                        根据您的问题，我们建议您：
+                        <div>
+                            请您确认是否违反信息小镇发帖版规，若有，则请修改信息，重新发布。
+                            出现这种情况的用户一般是由于使用多账户发布信息导致信息严重违规且信息靠后显示或删除，信息无法显示、刷新、置顶、推广，如果您有此行为，建议您七个工作日（不包含周六，周日）后固定一个账户及手机号码重新发布信息，给您带来不便请谅解。<br />
+                            <input class="btn btn-info" type="button" style="margin-top: 3px; width: 140px;" value="填表单，联系客服" onclick="TBD()" />
+                        </div>
+                    </div>
+                    <div class="div_qtxxmy_inner div_wtjj_inner_rhscdgsdpj" id="div_wtjj_inner_rhscdgsdpj" style="display:none">
+                        根据您的问题，我们建议您：
+                        <div>
+                            用户给予的评价暂时无法删除，给您带来不便请您谅解。<br />
+                            <input class="btn btn-info" type="button" style="margin-top: 3px; width: 140px;" value="填表单，联系客服" onclick="TBD()" />
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
