--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_LXKF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_LXKF.cshtml
@@ -132,26 +132,26 @@
                         <span class="span_wtjj_inner" id="span_wtjj_inner_mygrxx">2、冒用个人肖像、公司名称等虚假信息</span>
                         <span class="span_wtjj_inner" id="span_wtjj_inner_gsxxbmy">3、公司信息被冒用</span>
                     </div>
-                    <div class="div_qtxxmy_inner div_wtjj_inner_sfzbmy" id="div_wtjj_inner_sfzbmy" style="display:none">
+                    <div class="div_qtxxmy_inner div_wtjj_inner_sfzbmy" id="div_wtjj_inner_sfzbmy" style="display:none;">
                         根据您的问题，我们建议您：
                         <div class="div_wtjj_inner_sfzbmy_inner">
                             建议您取消或更换实名认证，请点击下方的"填表单，联系客服"按钮，在“描述问题中”填写“相关冒用的信息页面或用户页面的链接”，在“上传照片”中上传公司营业执照、法人身份证原件数码照，以便及时为您提交处理。<br />
                             <input class="btn btn-info" type="button" style="margin-top: 3px; width: 140px;" value="填表单，联系客服" onclick="TBD()" />
                         </div>
                     </div>
-                    <div class="div_qtxxmy_inner div_wtjj_inner_mygrxx" id="div_wtjj_inner_mygrxx" style="display:none">
+                    <div class="div_qtxxmy_inner div_wtjj_inner_mygrxx" id="div_wtjj_inner_mygrxx" style="display:none;height:350px;">
                         根据您的问题，我们建议您：
                         <div class="div_wtjj_inner_mygrxx_inner">
                             建议您在您被冒用的对应的信息页面中点击“举报”按钮进行举报并详细说明情况以便核实后处理。具体的按钮位置为： <br />
                             <span class="span_wtjj_inner_mygrxx_inner"></span>
-                            <input class="btn btn-info" type="button" style="margin-top: 3px; width: 140px;" value="填表单，联系客服" onclick="TBD()" />
+                            <input class="btn btn-info" type="button" style="margin-top: 10px; width: 140px;" value="填表单，联系客服" onclick="TBD()" />
                         </div>
                     </div>
-                    <div class="div_qtxxmy_inner div_wtjj_inner_gsxxbmy" id="div_wtjj_inner_gsxxbmy" style="display:none">
+                    <div class="div_qtxxmy_inner div_wtjj_inner_gsxxbmy" id="div_wtjj_inner_gsxxbmy" style="display:none;">
                         根据您的问题，我们建议您：
                         <div class="div_wtjj_inner_gsxxbmy_inner">
                             若您的公司信息被冒用，请点击此处快速申诉。<br />
-                            <input class="btn btn-info" type="button" style="margin-top: 3px; width: 140px;" value="填表单，联系客服" onclick="TBD()" />
+                            <input class="btn btn-info" type="button" style="margin-top: 10px; width: 140px;" value="填表单，联系客服" onclick="TBD()" />
                         </div>
                     </div>
                 </div>
@@ -192,6 +192,41 @@
                         </div>
                     </div>
                 </div>
+                <div class="div_wtjj_inner" id="div_zhbdj" style="display:none">
+                    <div style="display:block;height:75px;">
+                        <span class="span_wtjj_inner" id="span_wtjj_inner_fbxxstssjzhdj">1、发布信息时提示手机账号冻结是怎么回事</span>
+                        <span class="span_wtjj_inner" id="span_wtjj_inner_zhbdjdyyssm">2、账户被冻结的原因是什么</span>
+                        <span class="span_wtjj_inner" id="span_wtjj_inner_zhwfdl">3、账户无法登录</span>
+                    </div>
+                    <div class="div_qtxxmy_inner div_wtjj_inner_fbxxstssjzhdj" id="div_wtjj_inner_fbxxstssjzhdj" style="display:none">
+                        根据您的问题，我们建议您：
+                        <div>
+                            请您点击下方的“填表单，联系客服”按钮，在信息描述中填写被冻结的手机号码，以便核实，给您带来不便敬请谅解。<br />
+                            <input class="btn btn-info" type="button" style="margin-top: 3px; width: 140px;" value="填表单，联系客服" onclick="TBD()" />
+                        </div>
+                    </div>
+                    <div class="div_qtxxmy_inner div_wtjj_inner_zhbdjdyyssm" id="div_wtjj_inner_zhbdjdyyssm" style="display:none;height:356px;">
+                        根据您的问题，我们建议您：
+                        <div>
+                            &nbsp;&nbsp;&nbsp;&nbsp;您好，发布以下情况的信息，会无法解冻，建议您按照信息小镇发帖版规操作：<br />
+                            &nbsp;&nbsp;&nbsp;&nbsp;1、注册了多个公司信息，是严重违反版规的，针对该账户的公司资料是无法审核通过的，无法解冻。<br />
+                            &nbsp;&nbsp;&nbsp;&nbsp;2、发布的信息由于遭多用户投诉信息与实际描述不符，经过审核将账户电话被冻结无法解冻。<br />
+                            &nbsp;&nbsp;&nbsp;&nbsp;3、在此账户违规操作导致手机被冻结，无法解冻。<br />
+                            &nbsp;&nbsp;&nbsp;&nbsp;4、账户发布违反信息小镇发布版规的内容，将会暂时无法解冻。<br />
+                            &nbsp;&nbsp;&nbsp;&nbsp;以上情况下账户暂时无法解冻，建议按照信息小镇版规操作，去查看<span class="span_href">信息小镇发帖版规 >></span><br />
+                            &nbsp;&nbsp;&nbsp;&nbsp;此外，账户由于冒用他人营业执照发布信息造成系统冻结账户，如需解冻请点击“填表单，联系客服”按钮在上传图片中提供：营业执照副本数码照、税务登记证、组织机构代码证、基本开户许可证及公司法人手持身份证，以上证件必须是原件数码照，否则将不予通过。<br />
+                            <input class="btn btn-info" type="button" style="margin-top: 3px; width: 140px;" value="填表单，联系客服" onclick="TBD()" />
+                        </div>
+                    </div>
+                    <div class="div_qtxxmy_inner div_wtjj_inner_zhwfdl" id="div_wtjj_inner_zhwfdl" style="display:none">
+                        根据您的问题，我们建议您：
+                        <div>
+                            极有可能是您的密码错误，建议您现在去自助<span class="span_href">找回密码 >></span><br />
+                            <input class="btn btn-info" type="button" style="margin-top: 3px; width: 140px;" value="填表单，联系客服" onclick="TBD()" />
+                        </div>
+                    </div>
+                </div>
+                
             </div>
         </div>
         <div class="div_content div_content_tjkf" id="div_content_tjkf" style="margin-top:20px; display:none">
