--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_LXKF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_LXKF.cshtml
@@ -226,7 +226,159 @@
                         </div>
                     </div>
                 </div>
-                
+                <div class="div_wtjj_inner" id="div_bpwzj" style="display:none">
+                    <div style="display:block;height:75px;">
+                        <span class="span_wtjj_inner" id="span_wtjj_inner_bpwzjdyy">1、被判为职介的原因</span>
+                        <span class="span_wtjj_inner" id="span_wtjj_inner_fbzpxxsbpwzj">2、发布招聘信息时被判为职介</span>
+                    </div>
+                    <div class="div_qtxxmy_inner div_wtjj_inner_bpwzjdyy" id="div_wtjj_inner_bpwzjdyy" style="display:none;height:210px;">
+                        根据您的问题，我们建议您：
+                        <div>
+                            如果您的账户出现以下情况，会被判为职介：<br />
+                            1.以不同公司名称发布过招聘信息，已经属于职介行为，该行为暂无法帮您修改身份；<br />
+                            2.您发布的信息与您的公司经营范围不符，无法为您修改身份，给您带来的不便请谅解。<br />
+                            <input class="btn btn-info" type="button" style="margin-top: 3px; width: 140px;" value="填表单，联系客服" onclick="TBD()" />
+                        </div>
+                    </div>
+                    <div class="div_qtxxmy_inner div_wtjj_inner_fbzpxxsbpwzj" id="div_wtjj_inner_fbzpxxsbpwzj" style="display:none;height:210px;">
+                        根据您的问题，我们建议您：
+                        <div>
+                            由于近期招聘类别发现虚假信息较多，发布信息暂时做了调整，发布信息时必须要通过营业执照以及组织机构代码证、税务登记证、开户许可证其中一项，验证成功后才可更改身份：<br />
+                            1.若您的营业执照无法通过认证，并提示公司别名与公司名不一致。则建议您将公司别称填写为与公司名称相同即可；<br />
+                            2.若您还未做营业执照认证，请您完成营业执照认证以便为您核实身份。<br />
+                            <input class="btn btn-info" type="button" style="margin-top: 3px; width: 140px;" value="填表单，联系客服" onclick="TBD()" />
+                        </div>
+                    </div>
+                </div>
+                <div class="div_wtjj_inner" id="div_ghrz" style="display:none">
+                    <div style="display:block;height:180px;">
+                        <span class="span_wtjj_inner" id="span_wtjj_inner_ksghsjrz">1、快速更换/取消手机认证</span>
+                        <span class="span_wtjj_inner" id="span_wtjj_inner_ksghyx">2、快速更换/取消邮箱</span>
+                        <span class="span_wtjj_inner" id="span_wtjj_inner_qxsmrz">3、取消实名认证</span>
+                        <span class="span_wtjj_inner" id="span_wtjj_inner_qxyyzzrz">4、取消/更换营业执照认证</span>
+                        <span class="span_wtjj_inner" id="span_wtjj_inner_wfjssjdx">5、无法接收手机短信，怎么更换手机认证</span>
+                        <span class="span_wtjj_inner" id="span_wtjj_inner_xyxggsm">6、想要修改公司名？</span>
+                        <span class="span_wtjj_inner" id="span_wtjj_inner_yyzzrztbg">7、营业执照认证通不过</span>
+                        <span class="span_wtjj_inner" id="span_wtjj_inner_rhtjyyzzrz">8、如何提交营业执照认证</span>
+                        <span class="span_wtjj_inner" id="span_wtjj_inner_qxgrsfrz">9、取消个人身份认证</span>
+                    </div>
+                    <div class="div_qtxxmy_inner div_wtjj_inner_ksghsjrz" id="div_wtjj_inner_ksghsjrz" style="display:none;">
+                        根据您的问题，我们建议您：
+                        <div>
+                            如需要更换或取消手机认证，您可以去自助快速更换/取消手机认证，立刻解决问题，无需等待。<br />
+                            <input class="btn btn-info" type="button" style="margin-top: 3px; width: 140px;" value="填表单，联系客服" onclick="TBD()" />
+                        </div>
+                    </div>
+                    <div class="div_qtxxmy_inner div_wtjj_inner_ksghyx" id="div_wtjj_inner_ksghyx" style="display:none;">
+                        根据您的问题，我们建议您：
+                        <div>
+                            如需要更换或取消邮箱认证，您可以去自助快速更换/取消邮箱认证，立刻解决问题，无需等待。<br />
+                            <input class="btn btn-info" type="button" style="margin-top: 3px; width: 140px;" value="填表单，联系客服" onclick="TBD()" />
+                        </div>
+                    </div>
+                    <div class="div_qtxxmy_inner div_wtjj_inner_qxsmrz" id="div_wtjj_inner_qxsmrz" style="display:none;">
+                        根据您的问题，我们建议您：
+                        <div>
+                            实名认证，一经认证后不可取消。如有与实名有关的其他问题可点击“填表单，联系客服”进行咨询。<br />
+                            <input class="btn btn-info" type="button" style="margin-top: 3px; width: 140px;" value="填表单，联系客服" onclick="TBD()" />
+                        </div>
+                    </div>
+                    <div class="div_qtxxmy_inner div_wtjj_inner_qxyyzzrz" id="div_wtjj_inner_qxyyzzrz" style="display:none;">
+                        根据您的问题，我们建议您：
+                        <div>
+                            营业执照一经认证通过，无法取消，给您带来不便敬请谅解。<br />
+                            <input class="btn btn-info" type="button" style="margin-top: 3px; width: 140px;" value="填表单，联系客服" onclick="TBD()" />
+                        </div>
+                    </div>
+                    <div class="div_qtxxmy_inner div_wtjj_inner_wfjssjdx" id="div_wtjj_inner_wfjssjdx" style="display:none;">
+                        根据您的问题，我们建议您：
+                        <div>
+                            如您的被绑定的手机号因为丢失、停用而无法接收手机验证短信或需要解绑原手机号，建议您直接点击自助更换/解绑手机，立刻解决问题，无需等待。<br />
+                            <input class="btn btn-info" type="button" style="margin-top: 3px; width: 140px;" value="填表单，联系客服" onclick="TBD()" />
+                        </div>
+                    </div>
+                    <div class="div_qtxxmy_inner div_wtjj_inner_xyxggsm" id="div_wtjj_inner_xyxggsm" style="display:none;height:205px;">
+                        根据您的问题，我们建议您：
+                        <div>
+                            1、首先请您去认证管理查询您的营业执照是否被认证。<br />
+                            2、如果您的营业执照没有经过验证，则可以通过进行营业执照认证过程中修改公司名称，系统审核通过后会为您自动更改过来（注，只有此一次修改机会）；<br />
+                            3、如果您的营业执照已经认证，则无法更改公司名称，您可以留存该账户，去注册一个新的账户并认证新公司名称。<br />
+                            <input class="btn btn-info" type="button" style="margin-top: 3px; width: 140px;" value="填表单，联系客服" onclick="TBD()" />
+                        </div>
+                    </div>
+                    <div class="div_qtxxmy_inner div_wtjj_inner_yyzzrztbg" id="div_wtjj_inner_yyzzrztbg" style="display:none;height:323px;">
+                        根据您的问题，我们建议您：
+                        <div>
+                            您好，认证审核时间为2-5个工作日，请您耐心等待。<br />
+                            如果您超过5个工作日仍没有通过验证，请您对照看看是否出现以下问题，并采取对应的解决方案：<br />
+                            （1）上传营业执照时填写的公司名称和别称与证书不符，建议您在上传时填写一致后重新提交；<br />
+                            （2）证书图片不清晰或营业执照非原件副本数码照；<br />
+                            （3）提交信息与证书不符，如，营业执照注册号错误；<br />
+                            （4）证书没有年检章审核；<br />
+                            （5）冒充他人企业，在没有提供证明之前其信息会做删除处理。<br />
+                            如果您存在以上问题，请您修改后再重新上传。<br />
+                            <input class="btn btn-info" type="button" style="margin-top: 3px; width: 140px;" value="填表单，联系客服" onclick="TBD()" />
+                        </div>
+                    </div>
+                    <div class="div_qtxxmy_inner div_wtjj_inner_rhtjyyzzrz" id="div_wtjj_inner_rhtjyyzzrz" style="display:none;">
+                        根据您的问题，我们建议您：
+                        <div>
+                            建议您直接去营业执照认证中填写相应信息上传营业执照照片。<br />
+                            <input class="btn btn-info" type="button" style="margin-top: 3px; width: 140px;" value="填表单，联系客服" onclick="TBD()" />
+                        </div>
+                    </div>
+                    <div class="div_qtxxmy_inner div_wtjj_inner_qxgrsfrz" id="div_wtjj_inner_qxgrsfrz" style="display:none;">
+                        根据您的问题，我们建议您：
+                        <div>
+                            如您想取消实名认证，建议您点击下方的“填表单，联系客服按钮”，在文本框中输入您的身份证号，在“上传图片”选项上传手持身份证半身照，以便及时为您提交处理。<br />
+                            <input class="btn btn-info" type="button" style="margin-top: 3px; width: 140px;" value="填表单，联系客服" onclick="TBD()" />
+                        </div>
+                    </div>
+                </div>
+                <div class="div_wtjj_inner" id="div_zhbd" style="display:none">
+                    <div style="display:block;height:112px;">
+                        <span class="span_wtjj_inner" id="span_wtjj_inner_tszhmmcw">1、提示账户密码错误</span>
+                        <span class="span_wtjj_inner" id="span_wtjj_inner_sjbmyhbbrrz">2、手机被冒用或被别人认证</span>
+                        <span class="span_wtjj_inner" id="span_wtjj_inner_qtbdqk">3、其它被盗情况</span>
+                        <span class="span_wtjj_inner" id="span_wtjj_inner_zhbdxzx">4、账户被盗想注销</span>
+                        <span class="span_wtjj_inner" id="span_wtjj_inner_rhfzzhbd">5、如何防止账户被盗</span>
+                    </div>
+                    <div class="div_qtxxmy_inner div_wtjj_inner_tszhmmcw" id="div_wtjj_inner_tszhmmcw" style="display:none;">
+                        根据您的问题，我们建议您：
+                        <div>
+                            如果您的账户下绑定了手机和邮箱，直接去找回密码重新设置新的密码。此外，为了防止您的账户被盗用，请您不定期修改密码（使用较为复杂的密码）或进行<span class="span_href">实名认证</span>。<br />
+                            <input class="btn btn-info" type="button" style="margin-top: 3px; width: 140px;" value="填表单，联系客服" onclick="TBD()" />
+                        </div>
+                    </div>
+                    <div class="div_qtxxmy_inner div_wtjj_inner_sjbmyhbbrrz" id="div_wtjj_inner_sjbmyhbbrrz" style="display:none;">
+                        根据您的问题，我们建议您：
+                        <div>
+                            如果您的手机号被冒用，建议您直接去自助删除被冒用信息，立即解决问题，无需等待。此操作还可以将号码做屏蔽，屏蔽后此号码则无法在网站中再次发布信息。<br />
+                            <input class="btn btn-info" type="button" style="margin-top: 3px; width: 140px;" value="填表单，联系客服" onclick="TBD()" />
+                        </div>
+                    </div>
+                    <div class="div_qtxxmy_inner div_wtjj_inner_qtbdqk" id="div_wtjj_inner_qtbdqk" style="display:none;">
+                        根据您的问题，我们建议您：
+                        <div>
+                            如果存在其他账户被盗的情况，请您点击下方的“填表单，联系客服”按钮，填写被盗的账号、联系人、电话号码、被盗时间、是否有被盗资金（如有被盗资金请您提供资金总额、该订单号），并详细说明您的问题以便为您提交相关部门处理，给您带来的不便请谅解。<br />
+                            <input class="btn btn-info" type="button" style="margin-top: 3px; width: 140px;" value="填表单，联系客服" onclick="TBD()" />
+                        </div>
+                    </div>
+                    <div class="div_qtxxmy_inner div_wtjj_inner_zhbdxzx" id="div_wtjj_inner_zhbdxzx" style="display:none;">
+                        根据您的问题，我们建议您：
+                        <div>
+                            账户一经注册是无法修改以及注销的，在网站中是具有唯一性的，如果您不再使用此账户，可以将信息删除后，将账户搁置，给您造成的不便请谅解。<br />
+                            <input class="btn btn-info" type="button" style="margin-top: 3px; width: 140px;" value="填表单，联系客服" onclick="TBD()" />
+                        </div>
+                    </div>
+                    <div class="div_qtxxmy_inner div_wtjj_inner_rhfzzhbd" id="div_wtjj_inner_rhfzzhbd" style="display:none;">
+                        根据您的问题，我们建议您：
+                        <div>
+                            为了防止您的账户被盗用，请您不定期修改复杂的密码或进行实名认证。<br />
+                            <input class="btn btn-info" type="button" style="margin-top: 3px; width: 140px;" value="填表单，联系客服" onclick="TBD()" />
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="div_content div_content_tjkf" id="div_content_tjkf" style="margin-top:20px; display:none">
