--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_LXKF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_LXKF.cshtml
@@ -379,6 +379,122 @@
                         </div>
                     </div>
                 </div>
+                <div class="div_wtjj_inner" id="div_czwt" style="display:none">
+                    <div style="display:block;height:85px;">
+                        <span class="span_wtjj_inner" id="span_wtjj_inner_xykjczfp">1、需要开具充值发票</span>
+                        <span class="span_wtjj_inner" id="span_wtjj_inner_sqtkdz">2、申请的退款什么时间可以到</span>
+                        <span class="span_wtjj_inner" id="span_wtjj_inner_zdyfk">3、置顶已付款，但未显示</span>
+                    </div>
+                    <div class="div_qtxxmy_inner div_wtjj_inner_xykjczfp" id="div_wtjj_inner_xykjczfp" style="display:none;">
+                        根据您的问题，我们建议您：
+                        <div>
+                            请点击下方的“填表单，联系客服”，填写用户名、公司地址、发票抬头、金额、公司名称、收件人姓名、收件人电话和充值时间。提交后，处理时长一般为2-3个工作日，请您耐心等待。提交内容如下图所示： <br />
+                            <input class="btn btn-info" type="button" style="margin-top: 3px; width: 140px;" value="填表单，联系客服" onclick="TBD()" />
+                        </div>
+                    </div>
+                    <div class="div_qtxxmy_inner div_wtjj_inner_sqtkdz" id="div_wtjj_inner_sqtkdz" style="display:none;height:217px;">
+                        根据您的问题，我们建议您：
+                        <div>
+                            如果您第一次申请退款，卖家同意后，3-10个工作日到账。<br />
+                            第一次申请退款，卖家不进行任何操作，会在14天后系统自动退款。<br />
+                            如第一次申请退款，卖家拒绝，您可以点击第二次退款，卖家再次拒绝退款后，可以申请客服介入，客服介入后会根据买卖双方提供的证据进行判断。<br />
+                            <input class="btn btn-info" type="button" style="margin-top: 3px; width: 140px;" value="填表单，联系客服" onclick="TBD()" />
+                        </div>
+                    </div>
+                    <div class="div_qtxxmy_inner div_wtjj_inner_zdyfk" id="div_wtjj_inner_zdyfk" style="display:none; height:313px;">
+                        根据您的问题，我们建议您：
+                        <div>
+                            建议您稍后清理电脑缓存后刷新页面查看。 如果您没有取消置顶，而置顶信息却在列表的置顶位置不见了。<br />
+                            这可能是由于：<br />
+                            1.您置顶的信息可能涉及违法、不文明或具有欺骗性的信息，对此类信息，信息小镇有权力删除，删除后的置顶账户余额不予退还。<br />
+                            2.置顶的信息不适合置顶或在发帖者本人要求下，被管理员取消置顶。此种情况下，系统会根据置顶的真实时间，将剩余时间的账户余额退还给用户。<br />
+                            3.置顶中的信息，如果您修改了发布区域，该贴在原区域的置顶自动结束，账户余额不予以退还。 <br />
+                            <input class="btn btn-info" type="button" style="margin-top: 3px; width: 140px;" value="填表单，联系客服" onclick="TBD()" />
+                        </div>
+                    </div>
+                </div>
+                <div class="div_wtjj_inner" id="div_hzzx" style="display:none">
+                    <div style="display:block;height:85px;">
+                        <span class="span_wtjj_inner" id="span_wtjj_inner_sfzs">1、信息小镇网上的招聘、房产、二手、商务等公司是否真实？</span>
+                    </div>
+                    <div class="div_qtxxmy_inner div_wtjj_inner_sfzs" id="div_wtjj_inner_sfzs" style="display:none;">
+                        根据您的问题，我们建议您：
+                        <div>
+                            请点击下方的“填表单，联系客服”，填写用户名、公司地址、发票抬头、金额、公司名称、收件人姓名、收件人电话和充值时间。提交后，处理时长一般为2-3个工作日，请您耐心等待。提交内容如下图所示： <br />
+                            <input class="btn btn-info" type="button" style="margin-top: 3px; width: 140px;" value="填表单，联系客服" onclick="TBD()" />
+                        </div>
+                    </div>
+                </div>
+                <div class="div_wtjj_inner" id="div_zxzz" style="display:none">
+                    <div style="display:block;height:85px;">
+                        <span class="span_wtjj_inner" id="span_wtjj_inner_xcwhy">1、想成为会员</span>
+                        <span class="span_wtjj_inner" id="span_wtjj_inner_mjbmyzmb">2、卖家发货后，买家不满意怎么办</span>
+                    </div>
+                    <div class="div_qtxxmy_inner div_wtjj_inner_xcwhy" id="div_wtjj_inner_xcwhy" style="display:none;">
+                        根据您的问题，我们建议您：
+                        <div>
+                            若您需要付费推广业务，您可以拨打以下咨询电话 招聘推广咨询热线：400-151-1166 本地生活服务推广咨询热线：400-151-1166 房产推广咨询热线：400-858-3660 二手市场推广咨询热线：400-890-8558 二手车推广咨询热线：400-890-0358 宠物推广咨询热线：400-890-8558 <br />
+                            <input class="btn btn-info" type="button" style="margin-top: 3px; width: 140px;" value="填表单，联系客服" onclick="TBD()" />
+                        </div>
+                    </div>
+                    <div class="div_qtxxmy_inner div_wtjj_inner_mjbmyzmb" id="div_wtjj_inner_mjbmyzmb" style="display:none;">
+                        根据您的问题，我们建议您：
+                        <div>
+                            建议您去订单管理申请退款。<br />
+                            如果您第一次申请退款，卖家同意后，3-10个工作日到账。<br />
+                            若，第一次申请退款，卖家不进行任何操作，会在14天后系统自动退款。<br />
+                            若，第一次申请退款，卖家拒绝，您可以点击第二次退款，卖家再次拒绝退款后，可以申请客服介入，客服介入后会根据买卖双方提供的证据进行判断。<br />
+                            <input class="btn btn-info" type="button" style="margin-top: 3px; width: 140px;" value="填表单，联系客服" onclick="TBD()" />
+                        </div>
+                    </div>
+                </div>
+                <div class="div_wtjj_inner" id="div_xtwt" style="display:none">
+                    <div style="display:block;height:200px;">
+                        <span class="span_wtjj_inner" id="span_wtjj_inner_xxfbsb">1、信息发布失败</span>
+                        <span class="span_wtjj_inner" id="span_wtjj_inner_dbkwy">2、打不开网页或信息无法发布或上传</span>
+                        <span class="span_wtjj_inner" id="span_wtjj_inner_nrsrbl">3、写简历时内容输入不了或无法保存</span>
+                        <span class="span_wtjj_inner" id="span_wtjj_inner_qymcwfgh">4、企业名称无法更换</span>
+                        <span class="span_wtjj_inner" id="span_wtjj_inner_xyscxx">5、需要删除信息</span>
+                        <span class="span_wtjj_inner" id="span_wtjj_inner_zpxggsmc">6、招聘修改公司名称</span>
+                        <span class="span_wtjj_inner" id="span_wtjj_inner_sbddxyzm">7、收不到短信验证码</span>
+                        <span class="span_wtjj_inner" id="span_wtjj_inner_xghsjrz">8、手机号已无法使用 想更换/取消手机认证</span>
+                        <span class="span_wtjj_inner" id="span_wtjj_inner_yyzzwfsc">9、营业执照无法上传</span>
+                        <span class="span_wtjj_inner" id="span_wtjj_inner_yyzzyzbl">10、营业执照验证不了</span>
+                        <span class="span_wtjj_inner" id="span_wtjj_inner_xxsxbl">11、信息刷新不了</span>
+                        <span class="span_wtjj_inner" id="span_wtjj_inner_yrkyzdnr">12、在百度上面依然可以找到已删除的内容</span>
+
+                    </div>
+                    <div class="div_qtxxmy_inner div_wtjj_inner_xxfbsb" id="div_wtjj_inner_xxfbsb" style="display:none;">
+                        根据您的问题，我们建议您：
+                        <div>
+                            请查看具体的信息发布失败原因。<br />
+                            <input class="btn btn-info" type="button" style="margin-top: 3px; width: 140px;" value="填表单，联系客服" onclick="TBD()" />
+                        </div>
+                    </div>
+                    <div class="div_qtxxmy_inner div_wtjj_inner_dbkwy" id="div_wtjj_inner_dbkwy" style="display:none;">
+                        根据您的问题，我们建议您：
+                        <div>
+                            建议您清理一下您的IE缓存（操作如下：打开一个网页，在电脑窗口的上方点击工具下的Internet选项，在新窗口常规下的第二项为Internet临时文件中进行删除操作，再点击上方程序与高级一栏，将web重置和还原浏览器默认设置），退出浏览器重试。更换火狐或者IE9的浏览器进行尝试。<br />
+                            <input class="btn btn-info" type="button" style="margin-top: 3px; width: 140px;" value="填表单，联系客服" onclick="TBD()" />
+                        </div>
+                    </div>
+                    <div class="div_qtxxmy_inner div_wtjj_inner_nrsrbl" id="div_wtjj_inner_nrsrbl" style="display:none;">
+                        根据您的问题，我们建议您：
+                        <div>
+                            如果您写简历时无法输入内容或无法保存，建议您清理一下您的IE缓存（操作如下：打开一个网页，在电脑窗口的上方点击工具下的Internet选项，在新窗口常规下的第二项为Internet临时文件中进行删除操作，再点击上方程序与高级一栏，将web重置和还原浏览器默认设置），退出浏览器重试。更换火狐或者IE9的浏览器进行尝试。<br />
+                            <input class="btn btn-info" type="button" style="margin-top: 3px; width: 140px;" value="填表单，联系客服" onclick="TBD()" />
+                        </div>
+                    </div>
+                    <div class="div_qtxxmy_inner div_wtjj_inner_qymcwfgh" id="div_wtjj_inner_qymcwfgh" style="display:none;">
+                        根据您的问题，我们建议您：
+                        <div>
+                            1、首先请您去认证管理查询您的营业执照是否被认证。<br />
+                            2、如果您的营业执照没有经过验证则可以通过进行营业执照认证过程中可以修改公司名称，系统审核通过后会为您自动更改过来（注，只有此一次修改机会；<br />
+                            3、如果您的营业执照已经认证，则无法更改公司名称，您可以留存该账户，注册一个新的账户并认证新公司名称。<br />
+                            <input class="btn btn-info" type="button" style="margin-top: 3px; width: 140px;" value="填表单，联系客服" onclick="TBD()" />
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="div_content div_content_tjkf" id="div_content_tjkf" style="margin-top:20px; display:none">
